--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Operator Calculator</h2>
+
+  <input type="number" id="num1" placeholder="Enter first number">
+  <input type="number" id="num2" placeholder="Enter second number">
+
+  <select id="operator">
+    <option value="+">+</option>
+    <option value="-">-</option>
+    <option value="*">*</option>
+    <option value="/">/</option>
+  </select>
+
+  <button id="calculate">Calculate</button>
+
+  <h3 id="result"></h3>
+
+  <hr>
+
+  <div class="division">Hello</div>
+  <div class="division">Welcome</div>
+  <div class="division">To</div>
+  <div class="division">My</div>
+  <div class="division">Class</div>
+
+  <br>
+
+  <button id="change_text">Change Text</button>
+
+  <script src="script.js"></script>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
